fix card z-index on navbar; changed add collaboration color

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -99,14 +99,12 @@
   padding-bottom: 15px;
   padding-left: 20px;
   padding-right: 20px;
-  // width: 100%;
-  width: 330px;
+  width: 100%;
   height: max-content;
   gap: 20px;
   margin-bottom: 40px;
   .todo-card{
     width: 100%;
-    position: relative;
     .i{
       position: absolute;
       top: 5px;
@@ -119,6 +117,7 @@
     gap: 10px;
     background-color: white;
     border-radius: 5px;
+    width: 100%;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
     .event-card-content {
       display: flex;
